fixes bug 197079 "Status bar doesn't display 'Stopped' when stop button is clicked" r=dougt sr=jag a=asa